# arbitrage-bot-starter-2026

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  langgraph_starter.py  prd.json  pyproject.toml  ralph-docker.sh  ralph.sh  requirements.txt  setup-arbitrage-starter.sh
.claude/: settings.json
.claude/skills/arbitrage-scanner/: SKILL.md
.claude/skills/risk-manager/: SKILL.md
src/arb_bot/: __init__.py  config.py  fetcher.py  risk.py  scanner.py
tests/: conftest.py  test_risk.py  test_scanner.py
